@@ -95,6 +95,7 @@ class DcopPlaylistHandler : public QObject, virtual public AmarokPlaylistInterfa
       virtual void saveCurrentPlaylist();
       virtual void playByIndex(int);
       virtual int  getActiveIndex();
+      virtual void setStopAfterCurrent(bool);
       virtual void togglePlaylist();
       virtual void playMedia(const KURL &);
       virtual void shortStatusMessage(const QString&);
