@@ -4,7 +4,8 @@ amaroK ChangeLog
 
 
 VERSION 1.2.1:
-  FIX: coverfetcher: do not crash, when no cover found. (BR 99942)
+  ADD: New DCOP call "playlist: setStopAfterCurrent(bool)". (BR 99944)
+  FIX: Coverfetcher: Do not crash when no cover was found. (BR 99942)
   ADD: Support for amazon.co.jp.
   CHG: Toolbar items reordered for optimal usability, as suggested by
        Aaron "Tom Green" Seigo.
